Fix overflow issue in mobile

--- a/styles/scss/modules/_breadcrumb.scss
+++ b/styles/scss/modules/_breadcrumb.scss
@@ -73,7 +73,7 @@
 }
 
 @media screen and (max-width: $breakpoint-mobile-wide) {
-	.Breadcrumb {
+	.Path .Breadcrumb {
 		display: block;
 	}
 	.Path .BackLink {
